# bridge-schemas

./: .gitignore  404.html  CLAUDE.md  Makefile  README.md  about.yaml  index.html  justfile  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-docs.yml
case-studies/: index.html
case-studies/microbial-isolates/: index.html
case-studies/mll-bgc-methylorubrum/: index.html
cross-database-joins/: index.html
docs/: cross-database-joins.md  genes.md  index.md  linkages.md
docs/case-studies/: index.md  microbial-isolates.md  mll-bgc-methylorubrum.md
docs/explanation/: existing-schemas.md  functional-annotation.md  perturbation-experiments.md  taxonomic-coverage.md  traits.md
docs/methods/: index.md
explanation/existing-schemas/: index.html
explanation/functional-annotation/: index.html
explanation/perturbation-experiments/: index.html
explanation/taxonomic-coverage/: index.html
explanation/traits/: index.html
genes/: index.html
jgi/gcs_citation/: index.html
jgi/gold/: index.html
jgi/img_core_v400/: index.html
jgi/img_ext/: index.html
jgi/img_gold/: index.html
jgi/img_i_taxon/: index.html
jgi/img_methylome/: index.html
jgi/img_mysql_abc/: index.html
jgi/img_mysql_img/: index.html
jgi/img_mysql_imgvr_prod/: index.html
jgi/img_mysql_mbin/: index.html
jgi/img_mysql_misi/: index.html
jgi/img_proteome/: index.html
jgi/img_rnaseq/: index.html
jgi/img_sat_v450/: index.html
jgi/img_sub/: index.html
jgi/imgsg_dev/: index.html
jgi/imgvr/: index.html
jgi/mycocosm/: index.html
linkages/: index.html
methods/: index.html
(+13408 files in other folders)
